fixed dark mode text not visible in order now section

--- a/order.css
+++ b/order.css
@@ -194,6 +194,7 @@ body {
   font-size: 0.8rem;
   font-weight: 400;
   margin: 0 !important;
+  color: #000;
 }
 
 .item-sam {
@@ -236,6 +237,7 @@ body {
   font-size: 1.2rem;
   font-weight: 600;
   text-align: center;
+  color: #000;
 }
 
 .checkout-sam {
